Add support for generating a custom runtime image